@@ -52,6 +52,9 @@ Bug fixing is an on-going task, so it is implied in all sub-releases.
   * DocumentType.getName() now returns the correct value.
   * Fixed SVGLocatable.farthestViewportElement to return null when
     called on the outermost <svg> element.
+  * JavaScript fragments using different types within the one document
+    (such as text/javascript and application/ecmascript) now share the
+    same script interpreter.
 
 1.7beta1 -> 1.7
 ---------------
